- Townhall can be build from peon
- Order which need a destination is handled
- Render building for building placement
- Units takes time to be trained (according to their unit description)
- Render different building state according to construction ETA
- Building in construction or unit being trained can be canceled
- Render progress bar for unit training and building construction
===============================================================================

===============================================================================
* v0.5
===============================================================================
- HUD rendering (background, empty minimap, selection info icons, available
  order from current selected unit)
- Peon can be train (created and added to world) from townhall
- Refactor: A lots of structure have become classes
- Order handling
- Filenames renamed to lowercase
- Unit has now two state: move and action
- Singleton implementation
- Selection square is limited to game region only
===============================================================================

===============================================================================
* v0.4
===============================================================================
- Refactor: (posX, posY) stuff uses 'Vec2'
- World : stub + unit declaration
- Rename 'AnimDesc' To 'SpriteDesc'
- Add selectable 'mine' and 'town hall' unit into World (+ Rendering)
- Render map using (+ cache creation)
===============================================================================

===============================================================================
* v0.3
===============================================================================
- Peon animation: Idle, Move, Harvest, GatherGold, GatherWood
- Render selection square
- Mouse/Keyboard event handlers/structures
- Selected unit is assigned to Player
- Single unit selection with mouse