@@ -85,6 +85,10 @@ T Clamp(T parValue, T parMin, T parMax)
 
 bool DoesBBoxesCollide(const SDL_Rect* parBoxA, const SDL_Rect* parBoxB);
 EDir DirectionToTarget(const Vec2& parSrc, const Vec2& parDst);
+void TransformToScreenCoordinate(SDL_Rect& parRect);
+void TransformToScreenCoordinate(Vec2& parPos);
+void TransformToWorldCoordinate(SDL_Rect& parRect);
+void TransformToWorldCoordinate(Vec2& parRect);
 
 // ============================================================================
 // ----------------------------------------------------------------------------
