@@ -8,6 +8,7 @@
 - Render different building state according to construction ETA
 - Building in construction or unit being trained can be canceled
 - Render progress bar for unit training and building construction
+- Basic screen scrolling
 ===============================================================================
 
 ===============================================================================
